--- a/GlobalBluePurchased.Domain/Resources/Resources.SharedResource.en-US.resx
+++ b/GlobalBluePurchased.Domain/Resources/Resources.SharedResource.en-US.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="FiledsNameForInput" xml:space="preserve">
+    <value>Net,Gross,Vat</value>
+  </data>
+  <data name="GreatharThanZero" xml:space="preserve">
+    <value>The filed must be greathar than Zero</value>
+  </data>
   <data name="InputErrorMessage" xml:space="preserve">
     <value>You fill more than one input , Please fill just one input</value>
   </data>
